fix: ellipsis the title when width is too narrow (#412)
* fix: ellipsis the title when width is too narrow

* test: update snapshots with collapse

--- a/src/components/collapse/style.scss
+++ b/src/components/collapse/style.scss
@@ -49,6 +49,12 @@ $collapse__extra: #{$collapse}__extra;
         &:focus {
             border-color: var(--list-focusOutline);
         }
+
+        &__title {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
     }
 
     &__extra {
